--- a/index.html
+++ b/index.html
@@ -6,7 +6,20 @@
   <meta name="viewport" content="width=device-width">
   <script src="https://aframe.io/releases/0.3.0/aframe.min.js"></script>
   <script src="https://cdn.rawgit.com/AltspaceVR/aframe-altspace-component/v1.3.2/dist/aframe-altspace-component.min.js"></script>
-
+  <script>
+    altspace.getThreeJSTrackingSkeleton().then(function (skeleton) {
+          window.head = skeleton.getJoint('Head');
+        });
+        AFRAME.registerComponent('altspace-look-at', {
+          init: function () {
+            if (!window.altspace || !altspace.inClient) { return; }
+          },
+          tick: function () {
+            if (!window.head || !this.el.object3D) { return; }
+            this.el.object3D.lookAt(window.head.position); 
+          }
+        })
+  </script>
 </head>
 
 <body>
@@ -15,7 +28,9 @@
     <a-assets>
       <a-asset-item id="base" src="https://rawgit.com/Lia021/model/master/lia%20theater2.dae"></a-asset-item>
       <a-asset-item id="chair" src="https://rawgit.com/Lia021/model/master/lia%20theather%20chair.dae"></a-asset-item>
-
+      <a-asset-item id="sign" src="https://rawgit.com/Lia021/model/master/altspace.dae"></a-asset-item>
+      <a-asset-item id="lobby-sign" src="https://rawgit.com/Lia021/theater-space/master/lobby%20sign.dae"></a-asset-item>
+      <a-asset-item id="theatre-sign" src="https://rawgit.com/Lia021/theater-space/master/welcome%20theatre.dae"></a-asset-item>
     </a-assets>
 
 
@@ -83,11 +98,26 @@
 
     <!--model16-->
     <a-entity position="18.1 30.2 6" rotation="0 180 0" altspace-cursor-collider="enabled: false" collada-model="#chair"></a-entity>
+    <!--model17-->
+    <a-entity position="22 30.2 6" rotation="0 180 0" n-mesh-collider="enabled: true; type: environment" collada-model="#sign">
+      <a-animation attribute="rotation" dur="10000.5" fill="forwards" to="0 360 0" repeat="indefinite" easing="linear">
+      </a-animation>
+    </a-entity>
+    <!--model18-->
+    <a-entity position="22 30.2 -6" rotation="0 180 0" n-mesh-collider="enabled: true; type: environment" collada-model="#sign">
+      <a-animation attribute="rotation" dur="10000.5" fill="forwards" to="0 360 0" repeat="indefinite" easing="linear">
+      </a-animation>
+    </a-entity>
+    <!--model19-->
+    <a-entity position="3 9 -15" rotation="0 -90 0" n-mesh-collider="enabled: true; type: environment" collada-model="#lobby-sign"></a-entity>
+    <!--model20-->
+    <a-entity position="-2 31 10.50" rotation="0 -90 0" n-mesh-collider="enabled: true; type: environment" collada-model="#theatre-sign"></a-entity>
+
     <!--second floor-->
     <a-box src="http://i.imgur.com/Igynh8F.jpg" rotation="-90 0 0" width="30" height="23" depth="0.1" position="6 30 0" n-mesh-collider="enabled: true; type: environment"> </a-box>
     <!--lift-->
     <a-entity class='tractorbeam' position='0 0 13.3'>
-      <a-cylinder position='0 19 0' material='color: #77A3DA' side="double" opacity="0.15" rotation='0 45 0' radius='1.5' height='39' class="not-clickable" altspace-cursor-collider="enabled: false"></a-cylinder>
+      <a-cylinder position='0 19 0' material='color: #E2E8FD' side="double" opacity="0.15" rotation='0 45 0' radius='1.5' height='39' class="not-clickable" altspace-cursor-collider="enabled: false"></a-cylinder>
       <a-box id="lift" material="visible: false" n-sound="res: ui/notify; volume: 1; oneshot: true; on: animationstart" depth="3" height=".1" width="3" position='0 -.1 0' n-mesh-collider="type: environment">
         <a-animation begin='up' attribute="position" direction='normal' from='0 -.1 0' to='0 30 0' ease-out='linear' fill='both' dur='20000' repeat='0' />
       </a-box>
@@ -101,14 +131,14 @@
 
 
 
-    <a-sphere position='0 40 13.3' color='#FFFFFF' radius="2.5" geometry="segmentsWidth: 8; segmentsHeight: 8">
-      <a-animation to='0 360 0' easing='linear' dur='250' repeat='indefinite' />
-    </a-sphere>
+    <a-octahedron position='0 40 13.3' src="https://rawgit.com/Lia021/theater-space/master/star.jpg" radius="2.5" geometry="segmentsWidth: 8; segmentsHeight: 8">
+      <a-animation to='0 360 0' easing='linear' dur='10500' repeat='indefinite' />
+    </a-octahedron>
 
-    <a-sphere position='0 40 13.5' color='#77A3DA' radius="3" opacity="0.15"></a-sphere>
+    <a-sphere position='0 40 13.5' color='#E2E8FD' radius="3" opacity="0.15"></a-sphere>
 
-    <a-cylinder position='0 38 13.3' material='src: http://i.imgur.com/POncNjM.jpg' side="double" open-ended="true" radius='1.6' height='4'>
-      <a-animation to='0 360 0' easing='linear' dur='250' repeat='indefinite' />
+    <a-cylinder position='0 38 13.3' src="https://rawgit.com/Lia021/theater-space/master/star.jpg" side="double" open-ended="true" radius='1.6' height='3'>
+      <a-animation to='0 360 0' easing='linear' dur='11000' repeat='indefinite' />
     </a-cylinder>
     <!--ground-->
     <a-circle src="http://i.imgur.com/ZnNLY02.jpg" radius="3" position="0 0.1 0" rotation="-90 0 0" altspace-cursor-collider="enabled: false"></a-circle>
@@ -120,8 +150,88 @@
       </a-animation>
     </a-sphere>
 
+    <!--ground2-->
+    <a-circle src="http://i.imgur.com/ZnNLY02.jpg" radius="1.3" position="-0.1 0.1 13.2" rotation="-90 0 0" altspace-cursor-collider="enabled: false"></a-circle>
+    <!--ground3-->
+    <a-circle src="http://i.imgur.com/ZnNLY02.jpg" radius="1.3" position="-0.1 0.1 10.2" rotation="-90 0 0" altspace-cursor-collider="enabled: false"></a-circle>
+    <!--ground4-->
+    <a-circle src="http://i.imgur.com/ZnNLY02.jpg" radius="1.3" position="-0.1 0.1 7.4" rotation="-90 0 0" altspace-cursor-collider="enabled: false"></a-circle>
+    <!--ground5-->
+    <a-circle src="http://i.imgur.com/ZnNLY02.jpg" radius="1.3" position="-0.1 0.1 4.5" rotation="-90 0 0" altspace-cursor-collider="enabled: false"></a-circle>
+    <!--image sign-->
+    <a-image src="https://rawgit.com/Lia021/theater-space/master/dressup2.jpg" height="1" width="1" position="-2.95 1.90 0" side="front" rotation="0 90 0"></a-image>
+    <a-image src="https://rawgit.com/Lia021/theater-space/master/me.jpg" height="1" width="1" position="2.95 1.90 0" side="front" rotation="0 -90 0"></a-image>
+    <!--dance floor-->
+    <a-box position="2 7.80 -15" src="https://rawgit.com/Lia021/theater-space/master/tilefloor.jpg" n-mesh-collider="enabled: true; type: environment" side="front" rotation="-90 0 0" width="17" height="16.30" depth="0.5" altspace-cursor-collider="enabled: false"></a-box>
+    <!--hoop2-->
+    <a-entity n-object='res: objects/hoop' position="9.20 11 -22.30"></a-entity>
+    <a-entity n-object='res: effects/fire' position="9.20 11.50 -22.30" rotation="0 181 0"></a-entity>
+    <!--ball-->
+    <a-entity n-spawner='res: interactables/basketball' position="10 9 -19"></a-entity>
+    <a-entity n-spawner='res: interactables/soccerball' position="10 9 -20"></a-entity>
+    <a-entity n-spawner='res: interactables/gem' position="10 9 -19.50"></a-entity>
+
+    <!--basketballwall-->
+    <a-entity n-object='res: architecture/wall-2w-4h' position="10 8 -23.57" rotation="0 -90 0"></a-entity>
+    <a-entity n-object='res: architecture/wall-2w-4h' position="10.55 8 -21.15" rotation="0 181 0"></a-entity>
+    <!--boxstacktable-->
+    <a-entity n-object='res: pipes/pipe-full-cap-1d' n-mesh-collider="enabled: true; type: environment" position="-4 9 -15" rotation="90 0 0" scale="2 2 2"></a-entity>
+    <a-entity n-object='res: pipes/pipe-full-cap-1d' n-mesh-collider="enabled: true; type: environment" position="-4 9 -18" rotation="90 0 0" scale="2 2 2"></a-entity>
+    <a-entity n-object='res: pipes/pipe-full-cap-1d' n-mesh-collider="enabled: true; type: environment" position="-4 9 -12" rotation="90 0 0" scale="2 2 2"></a-entity>
+    <!--boxstack-->
+    <a-entity n-spawner='res: interactables/box' position="-4 10 -15"></a-entity>
+    <!--disco-->
+    <a-sphere position="3 16 -15" src="http://i.imgur.com/JaPVF8u.jpg" radius="2" segments-height="17">
+      <a-animation attribute="rotation" dur="10000.5" fill="forwards" to="0 360 0" repeat="indefinite" easing="linear">
+      </a-animation>
+    </a-sphere>
+    <!--lift-->
+    <a-entity class='tractorbeam' position='9 0 -5.35'>
+      <a-cylinder position='0 6 0' material='color: #E2E8FD' side="double" opacity="0.15" rotation='0 45 0' radius='1.5' height='12' class="not-clickable" altspace-cursor-collider="enabled: false"></a-cylinder>
+      <a-box id="lift" material="visible: false" n-sound="res: ui/notify; volume: 1; oneshot: true; on: animationstart" depth="3" height=".1" width="3" position='0 -.1 0' n-mesh-collider="type: environment">
+        <a-animation begin='up' attribute="position" direction='normal' from='0 -.1 0' to='0 8 0' ease-out='linear' fill='both' dur='20000' repeat='0' />
+      </a-box>
+
+      <a-entity id='upbutton' geometry="primitive: sphere; radius: .1" material='color: #1DD100' position="1 1 -1.5" sync-color wire="on: click; emit: up; targets: #lift" wire__0="on: click; emit: buttonchange; targets: #upbutton">
+        <a-animation begin='buttonchange' attribute="material.color" from='red' to='#1DD100' delay='20000' dur='200' fill='both' repeat='0' direction='backwards' />
+      </a-entity>
+      <a-entity n-billboard n-text="fontSize: 2; text: up" position="1 1.5 -1.5"></a-entity>
+    </a-entity>
 
 
+
+
+    <a-octahedron position='9 15 -5.35' src="https://rawgit.com/Lia021/theater-space/master/star.jpg" radius="2.5" geometry="segmentsWidth: 8; segmentsHeight: 8">
+      <a-animation to='0 360 0' easing='linear' dur='10500' repeat='indefinite' />
+    </a-octahedron>
+
+    <a-sphere position='9 15 -5.35' color='#E2E8FD' radius="3" opacity="0.15"></a-sphere>
+
+    <a-cylinder position='9 13 -5.35' src="https://rawgit.com/Lia021/theater-space/master/star.jpg" side="double" open-ended="true" radius='1.6' height='2'>
+      <a-animation to='0 360 0' easing='linear' dur='11000' repeat='indefinite' />
+    </a-cylinder>
+    <!--disco ground 1-->
+    <a-circle src="http://i.imgur.com/ZnNLY02.jpg" radius="1.3" position="9 0.1 -5.35" rotation="-90 0 0" altspace-cursor-collider="enabled: false"></a-circle>
+    <!--disco ground 2-->
+    <a-circle src="http://i.imgur.com/ZnNLY02.jpg" radius="1.3" position="5.90 0.1 -4.35" rotation="-90 0 0" altspace-cursor-collider="enabled: false"></a-circle>
+    <!--disco ground 1-->
+    <a-circle src="http://i.imgur.com/ZnNLY02.jpg" radius="1.3" position="3.30 0.1 -3.35" rotation="-90 0 0" altspace-cursor-collider="enabled: false"></a-circle>
+
+
+    <!--hoops-->
+    <a-entity n-object='res: objects/hoop' position="-15 1 2">
+      <a-animation attribute="position" direction='alternate' from='-15 1 2' to='-15 3 2' ease-in-out='linear' dur='1800' repeat='indefinite' /></a-entity>
+    <a-entity n-object='res: objects/hoop' position="-16 1 0">
+      <a-animation attribute="position" direction='alternate' from='-16 1 0' to='-16 3 0' ease-in-out='linear' dur='1600' repeat='indefinite' /></a-entity>
+    <a-entity n-object='res: objects/hoop' position="-17 1 -2">
+      <a-animation attribute="position" direction='alternate' from='-17 1 -2' to='-17 3 -2' ease-in-out='linear' dur='1400' repeat='indefinite' /></a-entity>
+    <a-entity n-object='res: objects/hoop' position="-18 1 -4">
+      <a-animation attribute="position" direction='alternate' from='-18 1 -4' to='-18 3 -4' ease-in-out='linear' dur='1200' repeat='indefinite' /></a-entity>
+    <!--ball-->
+    <a-entity n-spawner='res: interactables/gem' position="-14 1 2"></a-entity>
+    <a-entity n-spawner='res: interactables/basketball' position="-14 1 0"></a-entity>
+    <a-entity n-spawner='res: interactables/soccerball' position="-14 1 -2"></a-entity>
+    <a-entity n-spawner='res: interactables/bowling-pin' position="-14 1 -4"></a-entity>
 
 
 </body>
