--- a/index.html
+++ b/index.html
@@ -112,7 +112,27 @@
     <a-entity position="3 9 -15" rotation="0 -90 0" n-mesh-collider="enabled: true; type: environment" collada-model="#lobby-sign"></a-entity>
     <!--model20-->
     <a-entity position="-2 31 10.50" rotation="0 -90 0" n-mesh-collider="enabled: true; type: environment" collada-model="#theatre-sign"></a-entity>
-
+    <!--model21-->
+    <a-entity position="15 30.2 12" rotation="0 180 0" n-mesh-collider="enabled: true; type: environment" collada-model="#sign">
+      <a-animation attribute="rotation" dur="10000.5" fill="forwards" to="0 360 0" repeat="indefinite" easing="linear">
+      </a-animation>
+    </a-entity>
+     <!--model22-->
+    <a-entity position="5 30.2 12" rotation="0 180 0" n-mesh-collider="enabled: true; type: environment" collada-model="#sign">
+      <a-animation attribute="rotation" dur="10000.5" fill="forwards" to="0 360 0" repeat="indefinite" easing="linear">
+      </a-animation>
+    </a-entity>  
+     <!--model23-->
+    <a-entity position="15 30.2 -12" rotation="0 180 0" n-mesh-collider="enabled: true; type: environment" collada-model="#sign">
+      <a-animation attribute="rotation" dur="10000.5" fill="forwards" to="0 360 0" repeat="indefinite" easing="linear">
+      </a-animation>
+    </a-entity>
+     <!--model24-->
+    <a-entity position="5 30.2 -12" rotation="0 180 0" n-mesh-collider="enabled: true; type: environment" collada-model="#sign">
+      <a-animation attribute="rotation" dur="10000.5" fill="forwards" to="0 360 0" repeat="indefinite" easing="linear">
+      </a-animation>
+    </a-entity>
+    
     <!--second floor-->
     <a-box src="http://i.imgur.com/Igynh8F.jpg" rotation="-90 0 0" width="30" height="23" depth="0.1" position="6 30 0" n-mesh-collider="enabled: true; type: environment"> </a-box>
     <!--lift-->
