--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
       <a-asset-item id="sign" src="https://rawgit.com/Lia021/model/master/altspace.dae"></a-asset-item>
       <a-asset-item id="lobby-sign" src="https://rawgit.com/Lia021/theater-space/master/lobby%20sign.dae"></a-asset-item>
       <a-asset-item id="theatre-sign" src="https://rawgit.com/Lia021/theater-space/master/welcome%20theatre.dae"></a-asset-item>
+       <a-asset-item id="snacks" src="https://rawgit.com/Lia021/theater-space/master/snacksand%20Drinks.dae"></a-asset-item>
     </a-assets>
 
 
@@ -132,7 +133,9 @@
       <a-animation attribute="rotation" dur="10000.5" fill="forwards" to="0 360 0" repeat="indefinite" easing="linear">
       </a-animation>
     </a-entity>
-    
+    <!--model25-->
+
+    <a-entity position="3 8 -22" rotation="0 -90 0" altspace-cursor-collider="enabled: false" collada-model="#snacks"></a-entity>
     <!--second floor-->
     <a-box src="http://i.imgur.com/Igynh8F.jpg" rotation="-90 0 0" width="30" height="23" depth="0.1" position="6 30 0" n-mesh-collider="enabled: true; type: environment"> </a-box>
     <!--lift-->
