--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
     <a-assets>
       <a-asset-item id="base" src="https://rawgit.com/Lia021/model/master/lia%20theater2.dae"></a-asset-item>
       <a-asset-item id="chair" src="https://rawgit.com/Lia021/model/master/lia%20theather%20chair.dae"></a-asset-item>
-      <a-asset-item id="sign" src="https://rawgit.com/Lia021/theater-space/master/Altspace%20symbol1.dae"></a-asset-item>
-      <a-asset-item id="lobby-sign" src="https://rawgit.com/Lia021/theater-space/master/lobby%20sign.dae"></a-asset-item>
-      <a-asset-item id="theatre-sign" src="https://rawgit.com/Lia021/theater-space/master/welcome%20theatre.dae"></a-asset-item>
-      <a-asset-item id="platrom" src="https://rawgit.com/Lia021/theater-space/master/space-platrom.dae"></a-asset-item>
+      <a-asset-item id="sign" src="https://rawgit.com/Lia021/theater-space/master/Altspace%20symbol/Altspace%20symbol1.dae"></a-asset-item>
+      <a-asset-item id="lobby-sign" src="https://rawgit.com/Lia021/theater-space/master/lobby/lobby%20sign.dae"></a-asset-item>
+      <a-asset-item id="theatre-sign" src="https://rawgit.com/Lia021/theater-space/master/theater%20sign/welcome%20theatre.dae"></a-asset-item>
+      <a-asset-item id="platrom" src="https://rawgit.com/Lia021/theater-space/master/platrom/space-platrom.dae"></a-asset-item>
       <a-asset-item id="snacks" src="https://rawgit.com/Lia021/theater-space/master/snacksand%20Drinks.dae"></a-asset-item>
     </a-assets>
 
