--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <a-asset-item id="lobby-sign" src="https://rawgit.com/Lia021/theater-space/master/lobby/lobby%20sign.dae"></a-asset-item>
       <a-asset-item id="theatre-sign" src="https://rawgit.com/Lia021/theater-space/master/theater%20sign/welcome%20theatre.dae"></a-asset-item>
       <a-asset-item id="platrom" src="https://rawgit.com/Lia021/theater-space/master/platrom/space-platrom.dae"></a-asset-item>
-      <a-asset-item id="snacks" src="https://rawgit.com/Lia021/theater-space/master/snacksand%20Drinks.dae"></a-asset-item>
+      <a-asset-item id="snacks" src="https://rawgit.com/Lia021/theater-space/master/snack%20table/snacksand%20Drinks.dae"></a-asset-item>
     </a-assets>
 
 
@@ -140,7 +140,7 @@
     <a-entity position="2 1 -15" n-mesh-collider="enabled: true; type: environment" collada-model="#platrom"></a-entity>
     <!--second floor-->
     <a-box src="http://i.imgur.com/Igynh8F.jpg" rotation="-90 0 0" width="30" height="23" depth="0.1" position="6 30 0" n-mesh-collider="enabled: true; type: environment"> </a-box>
-    <!--lift-->
+ <!--lift-->
     <a-entity class='tractorbeam' position='0 0 13.3'>
       <a-cylinder position='0 19 0' material='color: #E2E8FD' side="double" opacity="0.15" rotation='0 45 0' radius='1.5' height='39' class="not-clickable" altspace-cursor-collider="enabled: false"></a-cylinder>
       <a-box id="lift" material="visible: false" n-sound="res: ui/notify; volume: 1; oneshot: true; on: animationstart" depth="3" height=".1" width="3" position='0 -.1 0' n-mesh-collider="type: environment">
