--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
       <a-asset-item id="theatre-sign" src="https://rawgit.com/Lia021/theater-space/master/theater%20sign/welcome%20theatre.dae"></a-asset-item>
       <a-asset-item id="platrom" src="https://rawgit.com/Lia021/theater-space/master/platrom/space-platrom.dae"></a-asset-item>
       <a-asset-item id="snacks" src="https://rawgit.com/Lia021/theater-space/master/snack%20table/snacksand%20Drinks.dae"></a-asset-item>
+      <a-asset-item id="fort" src="https://rawgit.com/Lia021/theater-space/master/base/spacebase.dae"></a-asset-item>
+      <a-asset-item id="floor" src="https://rawgit.com/Lia021/theater-space/master/base/base-floor.dae"></a-asset-item>
     </a-assets>
 
 
@@ -137,10 +139,21 @@
     <!--model25-->
     <a-entity position="3 8 -22" rotation="0 -90 0" n-mesh-collider="enabled: true; type: environment" collada-model="#snacks"></a-entity>
     <!--model26-->
-    <a-entity position="2 1 -15" n-mesh-collider="enabled: true; type: environment" collada-model="#platrom"></a-entity>
+    <a-entity position="-15 1.50 -15" n-mesh-collider="enabled: true; type: environment" collada-model="#platrom"> <a-animation attribute="position" direction='alternate' from='-15 1.50 -15' to='-15 2 -15' ease-in-out='linear' dur='1200' repeat='indefinite' />
+    </a-entity>
+      <!--model27-->
+    <a-entity position="-10 2 -15" n-mesh-collider="enabled: true; type: environment" collada-model="#platrom"> <a-animation attribute="position" direction='alternate' from='-10 1 -15' to='-10 1.50 -15' ease-in-out='linear' dur='1800' repeat='indefinite' />
+    </a-entity>
+      <!--model28-->
+    <a-entity position="-12.5 1 -19" n-mesh-collider="enabled: true; type: environment" collada-model="#platrom"> <a-animation attribute="position" direction='alternate' from='-12.5 2 -19' to='-12.5 2.50 -19' ease-in-out='linear' dur='1100' repeat='indefinite' />
+    </a-entity>
+     <!--model29-->
+    <a-entity position="2 0 -30"rotation="0 190 0"collada-model="#fort"></a-entity>
+     <!--model30-->
+    <a-entity position="2 0.02 -30"rotation="0 189 0"collada-model="#floor"></a-entity>
     <!--second floor-->
     <a-box src="http://i.imgur.com/Igynh8F.jpg" rotation="-90 0 0" width="30" height="23" depth="0.1" position="6 30 0" n-mesh-collider="enabled: true; type: environment"> </a-box>
- <!--lift-->
+    <!--lift-->
     <a-entity class='tractorbeam' position='0 0 13.3'>
       <a-cylinder position='0 19 0' material='color: #E2E8FD' side="double" opacity="0.15" rotation='0 45 0' radius='1.5' height='39' class="not-clickable" altspace-cursor-collider="enabled: false"></a-cylinder>
       <a-box id="lift" material="visible: false" n-sound="res: ui/notify; volume: 1; oneshot: true; on: animationstart" depth="3" height=".1" width="3" position='0 -.1 0' n-mesh-collider="type: environment">
@@ -206,7 +219,7 @@
     <!--boxstack-->
     <a-entity n-spawner='res: interactables/box' position="-4 10 -15"></a-entity>
     <!--disco-->
-    <a-sphere position="3 16 -15" src="http://i.imgur.com/JaPVF8u.jpg" n-sphere-collider="type: environment; radius: 2"radius="2" segments-height="17">
+    <a-sphere position="3 16 -15" src="http://i.imgur.com/JaPVF8u.jpg" n-sphere-collider="type: environment; radius: 2" radius="2" segments-height="17">
       <a-animation attribute="rotation" dur="10000.5" fill="forwards" to="0 360 0" repeat="indefinite" easing="linear">
       </a-animation>
     </a-sphere>
