--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
       <a-asset-item id="snacks" src="https://rawgit.com/Lia021/theater-space/master/snack%20table/snacksand%20Drinks.dae"></a-asset-item>
       <a-asset-item id="fort" src="https://rawgit.com/Lia021/theater-space/master/base/spacebase.dae"></a-asset-item>
       <a-asset-item id="floor" src="https://rawgit.com/Lia021/theater-space/master/base/base-floor.dae"></a-asset-item>
+      <a-asset-item id="candy-sign" src="https://rawgit.com/Lia021/theater-space/master/candyshop/candy.dae"></a-asset-item>
     </a-assets>
 
 
@@ -139,18 +140,23 @@
     <!--model25-->
     <a-entity position="3 8 -22" rotation="0 -90 0" n-mesh-collider="enabled: true; type: environment" collada-model="#snacks"></a-entity>
     <!--model26-->
-    <a-entity position="-15 1.50 -15" n-mesh-collider="enabled: true; type: environment" collada-model="#platrom"> <a-animation attribute="position" direction='alternate' from='-15 1.50 -15' to='-15 2 -15' ease-in-out='linear' dur='1200' repeat='indefinite' />
+    <a-entity position="-15 1.50 -15" n-mesh-collider="enabled: true; type: environment" collada-model="#platrom">
+      <a-animation attribute="position" direction='alternate' from='-15 1.50 -15' to='-15 2 -15' ease-in-out='linear' dur='1200' repeat='indefinite' />
     </a-entity>
-      <!--model27-->
-    <a-entity position="-10 2 -15" n-mesh-collider="enabled: true; type: environment" collada-model="#platrom"> <a-animation attribute="position" direction='alternate' from='-10 1 -15' to='-10 1.50 -15' ease-in-out='linear' dur='1800' repeat='indefinite' />
+    <!--model27-->
+    <a-entity position="-10 2 -15" n-mesh-collider="enabled: true; type: environment" collada-model="#platrom">
+      <a-animation attribute="position" direction='alternate' from='-10 1 -15' to='-10 1.50 -15' ease-in-out='linear' dur='1800' repeat='indefinite' />
     </a-entity>
-      <!--model28-->
-    <a-entity position="-12.5 1 -19" n-mesh-collider="enabled: true; type: environment" collada-model="#platrom"> <a-animation attribute="position" direction='alternate' from='-12.5 2 -19' to='-12.5 2.50 -19' ease-in-out='linear' dur='1100' repeat='indefinite' />
+    <!--model28-->
+    <a-entity position="-12.5 1 -19" n-mesh-collider="enabled: true; type: environment" collada-model="#platrom">
+      <a-animation attribute="position" direction='alternate' from='-12.5 2 -19' to='-12.5 2.50 -19' ease-in-out='linear' dur='1100' repeat='indefinite' />
     </a-entity>
-     <!--model29-->
-    <a-entity position="2 0 -30"rotation="0 190 0"collada-model="#fort"></a-entity>
-     <!--model30-->
-    <a-entity position="2 0.02 -30"rotation="0 189 0"collada-model="#floor"></a-entity>
+    <!--model29-->
+    <a-entity position="2 0 -30" rotation="0 190 0" collada-model="#fort"></a-entity>
+    <!--model30-->
+    <a-entity position="2 0.02 -30" rotation="0 189 0" collada-model="#floor"></a-entity>
+    <!--model31-->
+    <a-entity position="1 0.02 -27" rotation="0 -90 0" collada-model="#candy-sign"></a-entity>
     <!--second floor-->
     <a-box src="http://i.imgur.com/Igynh8F.jpg" rotation="-90 0 0" width="30" height="23" depth="0.1" position="6 30 0" n-mesh-collider="enabled: true; type: environment"> </a-box>
     <!--lift-->
