--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
     <!--model30-->
     <a-entity position="2 0.02 -30" rotation="0 189 0" collada-model="#floor"></a-entity>
     <!--model31-->
-    <a-entity position="1 0.02 -27" rotation="0 -90 0" collada-model="#candy-sign"></a-entity>
+    <a-entity position="1 0.02 -27" rotation="0 -90 0"n-mesh-collider="enabled: true; type: environment" collada-model="#candy-sign"></a-entity>
     <!--second floor-->
     <a-box src="http://i.imgur.com/Igynh8F.jpg" rotation="-90 0 0" width="30" height="23" depth="0.1" position="6 30 0" n-mesh-collider="enabled: true; type: environment"> </a-box>
     <!--lift-->
