--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
   <a-scene altspace=fullspace:true>
 
     <a-assets>
-      <a-asset-item id="base" src="https://rawgit.com/Lia021/model/master/lia%20theater2.dae"></a-asset-item>
-      <a-asset-item id="chair" src="https://rawgit.com/Lia021/model/master/lia%20theather%20chair.dae"></a-asset-item>
+      <a-asset-item id="base" src="https://rawgit.com/Lia021/model/master/theater/lia%20theater2.dae"></a-asset-item>
+      <a-asset-item id="chair" src="https://rawgit.com/Lia021/model/master/theaterchair/lia%20theather%20chair.dae"></a-asset-item>
       <a-asset-item id="sign" src="https://rawgit.com/Lia021/theater-space/master/Altspace%20symbol/Altspace%20symbol1.dae"></a-asset-item>
       <a-asset-item id="lobby-sign" src="https://rawgit.com/Lia021/theater-space/master/lobby/lobby%20sign.dae"></a-asset-item>
       <a-asset-item id="theatre-sign" src="https://rawgit.com/Lia021/theater-space/master/theater%20sign/welcome%20theatre.dae"></a-asset-item>
@@ -156,7 +156,7 @@
     <!--model30-->
     <a-entity position="2 0.02 -30" rotation="0 189 0" collada-model="#floor"></a-entity>
     <!--model31-->
-    <a-entity position="1 0.02 -27" rotation="0 -90 0"n-mesh-collider="enabled: true; type: environment" collada-model="#candy-sign"></a-entity>
+    <a-entity position="1 0.02 -27"n-mesh-collider="enabled: true; type: environment"rotation="0 -90 0" collada-model="#candy-sign"></a-entity>
     <!--second floor-->
     <a-box src="http://i.imgur.com/Igynh8F.jpg" rotation="-90 0 0" width="30" height="23" depth="0.1" position="6 30 0" n-mesh-collider="enabled: true; type: environment"> </a-box>
     <!--lift-->
