--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
       <a-asset-item id="fort" src="https://rawgit.com/Lia021/theater-space/master/base/spacebase.dae"></a-asset-item>
       <a-asset-item id="floor" src="https://rawgit.com/Lia021/theater-space/master/base/base-floor.dae"></a-asset-item>
       <a-asset-item id="table" src="https://rawgit.com/Lia021/theater-space/master/Table/Candyshop%20table.dae"></a-asset-item>
+       <a-asset-item id="bowel" src="https://rawgit.com/Lia021/theater-space/master/Candybowel/candy-bowel.dae"></a-asset-item>
+       <a-asset-item id="candy" src="https://rawgit.com/Lia021/theater-space/master/candy/spacecandy.dae"></a-asset-item>
+      <a-asset-item id="spacedonut" src="https://rawgit.com/Lia021/theater-space/master/Donut/spaceDonut.dae"></a-asset-item>
     </a-assets>
 
 
@@ -155,6 +158,12 @@
     <a-entity position="2 0.02 -30" rotation="0 189 0" altspace-cursor-collider="enabled: false" collada-model="#floor"></a-entity>
     <!--model28-->
     <a-entity position="2 0.02 -30.70" n-mesh-collider="enabled: true; type: environment"rotation="0 189 0" collada-model="#table"></a-entity>
+     <!--model29-->
+    <a-entity position="2 0.80 -31" n-mesh-collider="enabled: true; type: environment"rotation="0 189 0" collada-model="#bowel"></a-entity>
+       <!--model30-->
+    <a-entity position="1.40 0.85 -30.60" n-mesh-collider="enabled: true; type: environment"rotation="0 189 0" collada-model="#candy"></a-entity>
+        <!--model31-->
+    <a-entity position="2 0.85 -30.20" n-mesh-collider="enabled: true; type: environment"rotation="0 189 0" collada-model="#spacedonut"></a-entity>
     <!--text3-->
     <a-entity n-billboard n-text="fontSize: 2; text:Candyshop" position="1 1.70 -27"></a-entity>
     <!--second floor-->
