--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
         <!--model31-->
     <a-entity position="2 0.85 -30.20" n-mesh-collider="enabled: true; type: environment"rotation="0 189 0" collada-model="#spacedonut"></a-entity>
     <!--text3-->
-    <a-entity n-billboard n-text="fontSize: 2; text:Candyshop" position="1 1.70 -27"></a-entity>
+    <a-entity n-billboard n-text="fontSize: 2; text:Sweetshop" position="1 1.70 -27"></a-entity>
     <!--second floor-->
     <a-box src="http://i.imgur.com/Igynh8F.jpg" rotation="-90 0 0" width="30" height="23" depth="0.1" position="6 30 0" n-mesh-collider="enabled: true; type: environment"> </a-box>
     <!--lift-->
