--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
        <a-asset-item id="bowel" src="https://rawgit.com/Lia021/theater-space/master/Candybowel/candy-bowel.dae"></a-asset-item>
        <a-asset-item id="candy" src="https://rawgit.com/Lia021/theater-space/master/candy/spacecandy.dae"></a-asset-item>
       <a-asset-item id="spacedonut" src="https://rawgit.com/Lia021/theater-space/master/Donut/spaceDonut.dae"></a-asset-item>
+      <a-asset-item id="register" src="https://rawgit.com/Lia021/theater-space/master/register/cash%20register.dae"></a-asset-item>
     </a-assets>
 
 
@@ -164,6 +165,8 @@
     <a-entity position="1.40 0.85 -30.60" n-mesh-collider="enabled: true; type: environment"rotation="0 189 0" collada-model="#candy"></a-entity>
         <!--model31-->
     <a-entity position="2 0.85 -30.20" n-mesh-collider="enabled: true; type: environment"rotation="0 189 0" collada-model="#spacedonut"></a-entity>
+        <!--model32-->
+    <a-entity position="1.33 0 -27.50" n-mesh-collider="enabled: true; type: environment"rotation="0 189 0" collada-model="#register"></a-entity>
     <!--text3-->
     <a-entity n-billboard n-text="fontSize: 2; text:Sweetshop" position="1 1.70 -27"></a-entity>
     <!--second floor-->
