--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <a-asset-item id="chair" src="https://rawgit.com/Lia021/model/master/theaterchair/lia%20theather%20chair.dae"></a-asset-item>
       <a-asset-item id="sign" src="https://rawgit.com/Lia021/theater-space/master/Altspace%20symbol/Altspace%20symbol1.dae"></a-asset-item>
       <a-asset-item id="platrom" src="https://rawgit.com/Lia021/theater-space/master/platrom/space-platform.dae"></a-asset-item>
-      <a-asset-item id="snacks" src="https://rawgit.com/Lia021/theater-space/master/snack%20table/snacksand%20Drinks.dae"></a-asset-item>
+      <a-asset-item id="snacks" src="https://rawgit.com/Lia021/theater-space/master/popcorn/popcornand%20drink.dae"></a-asset-item>
       <a-asset-item id="fort" src="https://rawgit.com/Lia021/theater-space/master/base/spacebase.dae"></a-asset-item>
       <a-asset-item id="floor" src="https://rawgit.com/Lia021/theater-space/master/base/base-floor.dae"></a-asset-item>
       <a-asset-item id="table" src="https://rawgit.com/Lia021/theater-space/master/Table/Candyshop%20table.dae"></a-asset-item>
