--- a/index.html
+++ b/index.html
@@ -141,6 +141,8 @@
     </a-entity>
     <!--model22-->
     <a-entity position="3 9 -22" rotation="0 -90 0" n-mesh-collider="enabled: true; type: environment" collada-model="#snacks"></a-entity>
+      <!--text3-->
+    <a-entity n-billboard n-text="fontSize: 2; text:Snacks and Drinks" position="2 9 -21"></a-entity>
     <!--model23-->
     <a-entity position="-15 1.50 -15" n-mesh-collider="enabled: true; type: environment" collada-model="#platrom">
       <a-animation attribute="position" direction='alternate' from='-15 1.50 -15' to='-15 2 -15' ease-in-out='linear' dur='1200' repeat='indefinite' />
@@ -167,7 +169,7 @@
     <a-entity position="2 0.85 -30.20" n-mesh-collider="enabled: true; type: environment"rotation="0 189 0" collada-model="#spacedonut"></a-entity>
         <!--model32-->
     <a-entity position="1.33 0 -27.50" n-mesh-collider="enabled: true; type: environment"rotation="0 189 0" collada-model="#register"></a-entity>
-    <!--text3-->
+    <!--text4-->
     <a-entity n-billboard n-text="fontSize: 2; text:Sweetshop" position="1 1.70 -27"></a-entity>
     <!--second floor-->
     <a-box src="http://i.imgur.com/Igynh8F.jpg" rotation="-90 0 0" width="30" height="23" depth="0.1" position="6 30 0" n-mesh-collider="enabled: true; type: environment"> </a-box>
