--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
 
     <!--sky-->
-    <a-sky radius="800" src="http://i.imgur.com/JaI0qA5.jpg"></a-sky>
+    <a-sky radius="800" src="https://rawgit.com/Lia021/theater-space/master/space.jpg"></a-sky>
     <!--model-->
 
     <a-entity position="0 30.2 0" n-mesh-collider="enabled: true; type: environment" collada-model="#base"></a-entity>
