--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
     <a-entity position="-15 0.40 6.50">
     <a-entity id="pc-canada" n-sound="on: canada; src: https://rawgit.com/Lia021/sound/master/O_Canada_-_Canada.ogg;"></a-entity>
     <a-entity id="gear-canada" n-sound="on: canada; src: https://rawgit.com/Lia021/sound/master/O%20Canada%20-%20Canada.mp3;"></a-entity>
-      <a-box wire="on: click; emit: canada; targets: #pc-canada, #gear-canada;"></a-box>
+      <a-box wire="on: click; emit: canada; targets: #pc-canada, #gear-canada;"color="#A7B7BC"></a-box>
 </a-entity>
     <!--text1-->
     <a-entity n-billboard n-text="fontSize: 3; text:Lobby" position="3 10.70 -15"></a-entity>
